--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
     <footer>
       <p>This is footer of my website</p>
+      <p>Add something, in order to practise commit</p>
     </footer>
   </body>
 </html>
