Add copyright note

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <footer>
       <p>This is footer of my website</p>
       <p>Add something, in order to practise commit</p>
+      <small>Copyright von Huimin</small>
     </footer>
   </body>
 </html>
