Add a and img tags

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <h1>Huimin Cao</h1>
       <div>
         <ul>
-          <li>Contact</li>
-          <li>Biography</li>
+          <li><a href="#Contact">Contact</a></li>
+          <li><a href="#Biography">Biography</a></li>
         </ul>
       </div>
     </header>
@@ -24,13 +24,13 @@
 
       <section>
         <ul>
-          <li>Personality</li>
-          <li>Hobbys</li>
+          <li>Personality: Friendly, Teamplayer</li>
+          <li>Hobbys: Lesen, Jogen, Wandern</li>
         </ul>
       </section>
 
       <section>
-        Contact
+        <h2 id="Contact">Contact</h2>
         <ul>
           <li>Phone Number: 015227216556</li>
           <li>E-mail: huim.cao@gmail.com</li>
@@ -38,15 +38,30 @@
       </section>
 
       <section>
-        <p>links to Github, Codepen, LinkedIn</p>
+        <h2>links to Github, Codepen, LinkedIn</h2>
         <ul>
-          <li>Github</li>
-          <li>Codepen</li>
-          <li>LinkedIn</li>
+          <li>
+            <a href="https://github.com/Huimin66">
+              Github
+              <img src="" alt="" />
+            </a>
+          </li>
+          <li>
+            <a href="https://codepen.io/HM-Cao">
+              Codepen
+              <img src="" alt="" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              LinkedIn
+              <img src="" alt="" />
+            </a>
+          </li>
         </ul>
       </section>
       <section>
-        <p>About yourself</p>
+        <h2 id="Biography">About Myself</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, nihil!
           Voluptatum enim ullam placeat! Eum est nam porro aliquam quidem quasi
@@ -55,13 +70,20 @@
       </section>
 
       <section>
-        <p>CV</p>
+        <h2>CV</h2>
+        <h3>Educational Experience</h3>
+        <ul>
+          <li>2004-2008 NJUST Bachelor</li>
+          <li>2008-2010 NJUST Master</li>
+        </ul>
+        <h3>Work Experience</h3>
+        <ul>
+          <li>06.2010 -04.2013 ZTE</li>
+        </ul>
       </section>
     </main>
 
     <footer>
-      <p>This is footer of my website</p>
-      <p>Add something, in order to practise commit</p>
       <small>Copyright von Huimin</small>
     </footer>
   </body>
