--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Document</title>
   </head>
   <body>
@@ -25,7 +26,7 @@
       <section>
         <ul>
           <li>Personality: Friendly, Teamplayer</li>
-          <li>Hobbys: Lesen, Jogen, Wandern</li>
+          <li>Hobbys: Reading, Jogging, Hiking</li>
         </ul>
       </section>
 
