--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <h1>Huimin Cao</h1>
       <div>
-        <ul>
+        <ul class="nav">
           <li>Contact</li>
           <li>Biography</li>
         </ul>
@@ -25,14 +25,14 @@
       </section>
 
       <section>
-        <ul>
+        <ul class="moreinfo">
           <li>Personality</li>
           <li>Hobbys</li>
         </ul>
       </section>
 
       <section>
-        Contact
+        <h2>Contact</h2>
         <ul>
           <li>Phone Number: 015227216556</li>
           <li>E-mail: huim.cao@gmail.com</li>
@@ -40,7 +40,7 @@
       </section>
 
       <section>
-        <p>links to Github, Codepen, LinkedIn</p>
+        <h2>links to Github, Codepen, LinkedIn</h2>
         <ul>
           <li>Github</li>
           <li>Codepen</li>
