--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&family=Roboto:wght@100&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Document</title>
   </head>
@@ -11,7 +18,7 @@
     <header>
       <h1>Huimin Cao</h1>
       <div>
-        <ul>
+        <ul class="nav">
           <li><a href="#Contact">Contact</a></li>
           <li><a href="#Biography">Biography</a></li>
         </ul>
@@ -19,8 +26,9 @@
     </header>
 
     <main>
-      <section>
-        <img src="" alt="my foto" />
+      <section class="foto">
+        <img src="foto1.jpg" alt="my foto" />
+        <img src="foto2.jpg" alt="my foto" />
       </section>
 
       <section>
@@ -74,12 +82,12 @@
         <h2>CV</h2>
         <h3>Educational Experience</h3>
         <ul>
-          <li>2004-2008 NJUST Bachelor</li>
-          <li>2008-2010 NJUST Master</li>
+          <li>Lorem ipsum dolor.</li>
+          <li>Lorem ipsum dolor.</li>
         </ul>
         <h3>Work Experience</h3>
         <ul>
-          <li>06.2010 -04.2013 ZTE</li>
+          <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit./li></li>
         </ul>
       </section>
     </main>
