Add more styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&family=Roboto:wght@100&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap"
       rel="stylesheet"
     />
 
@@ -31,14 +31,15 @@
         <img src="foto2.jpg" alt="my foto" />
       </section>
 
-      <section>
+      <section class="section">
+        <h2 id="Contact">Tags</h2>
         <ul>
-          <li>Personality: Friendly, Teamplayer</li>
+          <li>Personality: Helpful, Teamplayer</li>
           <li>Hobbys: Reading, Jogging, Hiking</li>
         </ul>
       </section>
 
-      <section>
+      <section class="section">
         <h2 id="Contact">Contact</h2>
         <ul>
           <li>Phone Number: 015227216556</li>
@@ -46,8 +47,8 @@
         </ul>
       </section>
 
-      <section>
-        <h2>links to Github, Codepen, LinkedIn</h2>
+      <section class="section">
+        <h2>links to</h2>
         <ul>
           <li>
             <a href="https://github.com/Huimin66">
@@ -69,8 +70,8 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2 id="Biography">About Myself</h2>
+      <section class="section">
+        <h2 id="Biography">About Me</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, nihil!
           Voluptatum enim ullam placeat! Eum est nam porro aliquam quidem quasi
@@ -78,7 +79,7 @@
         </p>
       </section>
 
-      <section>
+      <section class="section">
         <h2>CV</h2>
         <h3>Educational Experience</h3>
         <ul>
@@ -92,7 +93,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="footer">
       <small>Copyright von Huimin</small>
     </footer>
   </body>
