--- a/index.html
+++ b/index.html
@@ -17,18 +17,19 @@
   <body>
     <header>
       <h1>Huimin Cao</h1>
-      <div>
+      <section>
         <ul class="nav">
           <li><a href="#Contact">Contact</a></li>
           <li><a href="#Biography">Biography</a></li>
         </ul>
-      </div>
+      </section>
     </header>
 
     <main>
-      <section class="foto">
-        <img src="foto1.jpg" alt="my foto" />
-        <img src="foto2.jpg" alt="my foto" />
+      <section class="fotos">
+        <a href="https://github.com/Huimin66"
+          ><img class="foto" src="foto2.jpg" alt="my foto"
+        /></a>
       </section>
 
       <section class="section">
