--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <h1>Huimin Cao</h1>
       <section>
         <ul class="nav">
@@ -26,22 +26,32 @@
     </header>
 
     <main>
-      <section class="fotos">
-        <a href="https://github.com/Huimin66"
-          ><img class="foto" src="foto2.jpg" alt="my foto"
-        /></a>
+      <section class="fotoAddTag">
+        <section class="fotos">
+          <img class="foto" src="foto2.jpg" alt="my foto" />
+        </section>
+
+        <section class="tags">
+          <h2 id="Contact">Personality</h2>
+          <ul class="lists">
+            <li class="button">Teamplayer</li>
+            <li class="button">Honest</li>
+            <li class="button">Perseverance</li>
+            <li class="button">Curious</li>
+          </ul>
+
+          <h2 id="Contact">Hobbys</h2>
+          <ul class="lists">
+            <li class="button">Coding</li>
+            <li class="button">Reading</li>
+            <li class="button">Jogging</li>
+            <li class="button">Hiking</li>
+          </ul>
+        </section>
       </section>
 
       <section class="section">
-        <h2 id="Contact">Tags</h2>
-        <ul>
-          <li>Personality: Helpful, Teamplayer</li>
-          <li>Hobbys: Reading, Jogging, Hiking</li>
-        </ul>
-      </section>
-
-      <section class="section">
-        <h2 id="Contact">Contact</h2>
+        <h2 id="contact">Contact</h2>
         <ul>
           <li>Phone Number: 015227216556</li>
           <li>E-mail: huim.cao@gmail.com</li>
