--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </header>
 
     <main>
-      <section class="fotoAddTag">
-        <section class="fotos">
-          <img class="foto" src="foto2.jpg" alt="my foto" />
+      <section class="foto_tags_container section">
+        <section class="foto_container">
+          <img class="foto" src="image.jpg" alt="my foto" />
         </section>
 
         <section class="tags">
@@ -51,32 +51,29 @@
       </section>
 
       <section class="section">
-        <h2 id="contact">Contact</h2>
+        <h2 id="Contact">Contact</h2>
         <ul>
-          <li>Phone Number: 015227216556</li>
-          <li>E-mail: huim.cao@gmail.com</li>
+          <li>Phone Number: 0123456789</li>
+          <li>E-mail: xxxxxxx@gmail.com</li>
         </ul>
       </section>
 
-      <section class="section">
+      <section class="section link_to">
         <h2>links to</h2>
         <ul>
           <li>
             <a href="https://github.com/Huimin66">
-              Github
-              <img src="" alt="" />
+              <img src="github.jpg" alt="github" />
             </a>
           </li>
           <li>
             <a href="https://codepen.io/HM-Cao">
-              Codepen
-              <img src="" alt="" />
+              <img src="codepen-logo.png" alt="codepen" />
             </a>
           </li>
           <li>
             <a href="#">
-              LinkedIn
-              <img src="" alt="" />
+              <img src="linkedin.png" alt="LinkedIn" />
             </a>
           </li>
         </ul>
@@ -84,9 +81,17 @@
       <section class="section">
         <h2 id="Biography">About Me</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, nihil!
-          Voluptatum enim ullam placeat! Eum est nam porro aliquam quidem quasi
-          reiciendis iste natus. Aperiam atque commodi quibusdam deleniti eum?
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto
+          officiis facere expedita excepturi quidem quasi natus adipisci vitae
+          dicta at nisi rerum numquam, nemo unde a cum cupiditate atque
+          temporibus. <br />&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor, sit amet
+          consectetur adipisicing elit. Iusto, eum molestiae, mollitia, nesciunt
+          quas alias odio quidem quasi sapiente iure iste nemo! Quidem enim,
+          provident dolorem explicabo debitis ipsam alias.
+          <br />&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Hic enim dolore explicabo dignissimos corrupti,
+          fugit reprehenderit commodi id. Sit labore, quae veniam blanditiis et
+          molestias quasi commodi neque iusto eveniet!
         </p>
       </section>
 
@@ -94,13 +99,29 @@
         <h2>CV</h2>
         <h3>Educational Experience</h3>
         <ul>
-          <li>Lorem ipsum dolor.</li>
-          <li>Lorem ipsum dolor.</li>
+          <li>
+            2001-2004 Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          </li>
+          <li>
+            2004-2008 Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          </li>
+          <li>
+            2008-2010 Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          </li>
         </ul>
         <h3>Work Experience</h3>
         <ul>
-          <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit./li></li>
+          <li>
+            2010-2013 Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          </li>
+          <li>
+            2010-2013 Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          </li>
         </ul>
+      </section>
+      <section class="section signature">
+        <p>06.05.2022</p>
+        <p>cao</p>
       </section>
     </main>
 
