Fix some problems

--- a/index.html
+++ b/index.html
@@ -32,15 +32,16 @@
         </section>
 
         <section class="tags">
-          <h2 id="Contact">Personality</h2>
+          <h2>Competence</h2>
           <ul class="lists">
-            <li class="button">Teamplayer</li>
-            <li class="button">Honest</li>
-            <li class="button">Perseverance</li>
-            <li class="button">Curious</li>
+            <li class="button">HTML</li>
+            <li class="button">CSS</li>
+            <li class="button">Javascript</li>
+            <li class="button">React</li>
+            <li class="button">Java</li>
           </ul>
 
-          <h2 id="Contact">Hobbys</h2>
+          <h2>Hobbys</h2>
           <ul class="lists">
             <li class="button">Coding</li>
             <li class="button">Reading</li>
@@ -52,6 +53,7 @@
 
       <section class="section">
         <h2 id="Contact">Contact</h2>
+
         <ul>
           <li>Phone Number: 0123456789</li>
           <li>E-mail: xxxxxxx@gmail.com</li>
