Add flex to link_img

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <section class="section link_to">
         <h2>links to</h2>
-        <ul>
+        <ul link_to_img>
           <li>
             <a href="https://github.com/Huimin66">
               <img src="github.jpg" alt="github" />
